--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -261,11 +261,20 @@
                 <!-- Hidden ID to track if we are editing -->
                 <input type="hidden" id="edit-product-id" name="id">
 
+                <!-- Inside public/dashboard.html -->
                 <div class="form-group">
-                    <label>Product Images</label>
-                    <input type="file" name="image" class="form-control" accept="image/*" multiple>
-                    <p style="font-size:0.8rem; color:#64748b; margin-top:5px;">Leave empty to keep existing images.</p>
+                   <label>Product Images</label>
+    
+                   <!-- NEW: Preview Container -->
+                  <div id="modal-img-preview" style="margin-bottom: 10px; display: none;">
+                      <p style="font-size: 0.8rem; color: #64748b; margin-bottom: 5px;">Current Image:</p>
+                      <img id="current-img-display" src="" alt="Product" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px; border: 1px solid #cbd5e1;">
+                  </div>
+
+                  <input type="file" id="p-image-input" name="image" class="form-control" accept="image/*" multiple>
+                  <p style="font-size:0.8rem; color:#64748b; margin-top:5px;">Leave empty to keep existing images.</p>
                 </div>
+                
                 <div class="form-group">
                     <label>Product Name</label>
                     <input type="text" name="name" id="p-name" class="form-control" required>
