--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -312,7 +312,7 @@
                       <img id="current-img-display" src="" alt="Product" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px; border: 1px solid #cbd5e1;">
                   </div>
 
-                  <input type="file" id="p-image-input" name="image" class="form-control" accept="image/*" multiple>
+                  <input type="file" id="p-image-input" name="images" class="form-control" accept="image/*" multiple>
                   <p style="font-size:0.8rem; color:#64748b; margin-top:5px;">Leave empty to keep existing images.</p>
                 </div>
                 
