fixed final found bugs

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -397,6 +397,7 @@
                     <select id="u-role-select" class="form-control">
                         <option value="customer">Customer</option>
                         <option value="admin">Admin</option>
+                        <option value="admin">POS</option>
                     </select>
                     <button onclick="saveUserRole()" class="btn-primary">Update</button>
                 </div>
